(Bug 42439) Incorrect vertical alignment for Telugu web font
Vertically aligned the buttons to middle

--- a/resources/css/ext.uls.displaysettings.css
+++ b/resources/css/ext.uls.displaysettings.css
@@ -26,6 +26,7 @@ div.display-settings-block {
 	width: 23%;
 	text-overflow: ellipsis;
 	margin-right: 15px;
+	vertical-align: middle;
 }
 
 .uls-ui-languages button#uls-more-languages {
